--- a/rpt/PatientBillPaymentsTXT.jrxml
+++ b/rpt/PatientBillPaymentsTXT.jrxml
@@ -66,7 +66,7 @@ ORDER BY BLP_DATE ASC]]></queryString>
 					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 </box>
 					<textElement textAlignment="Center" verticalAlignment="Middle">
-						<font fontName="Courier New" pdfFontName="Helvetica" size="12" isBold="false"/>
+						<font fontName="Courier New" size="12" isBold="false"/>
 					</textElement>
 				<textFieldExpression   class="java.lang.String"><![CDATA[$P{Hospital}]]></textFieldExpression>
 				</textField>
@@ -210,7 +210,7 @@ ORDER BY BLP_DATE ASC]]></queryString>
 					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 </box>
 					<textElement textAlignment="Right" verticalAlignment="Bottom">
-						<font fontName="Courier New" pdfFontName="Helvetica" size="12" isBold="false"/>
+						<font fontName="Courier New" size="12" isBold="false"/>
 					</textElement>
 				<text><![CDATA[Total]]></text>
 				</staticText>
@@ -294,7 +294,7 @@ ORDER BY BLP_DATE ASC]]></queryString>
 					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 </box>
 					<textElement textAlignment="Right" verticalAlignment="Bottom">
-						<font fontName="Courier New" pdfFontName="Helvetica" size="12" isBold="false"/>
+						<font fontName="Courier New" size="12" isBold="false"/>
 					</textElement>
 				<text><![CDATA[TOTAL:]]></text>
 				</staticText>
@@ -311,7 +311,7 @@ ORDER BY BLP_DATE ASC]]></queryString>
 					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 </box>
 					<textElement textAlignment="Right" verticalAlignment="Bottom">
-						<font fontName="Courier New" pdfFontName="Helvetica" size="12" isBold="false"/>
+						<font fontName="Courier New" size="12" isBold="false"/>
 					</textElement>
 				<text><![CDATA[BALANCE:]]></text>
 				</staticText>
