--- a/rpt/LabelForSamples.jrxml
+++ b/rpt/LabelForSamples.jrxml
@@ -25,37 +25,14 @@
 	<import value="net.sf.jasperreports.engine.util.JRImageLoader" />
 	<import value="org.joda.time.*" />
 
-	<parameter name="patientID" isForPrompting="true" class="java.lang.String"/>
-	<queryString><![CDATA[SELECT * 
-FROM PATIENT
-WHERE PAT_ID Like $P{patientID}]]></queryString>
+	<parameter name="laboratoryID" isForPrompting="true" class="java.lang.String"/>
+	<queryString><![CDATA[SELECT LAB_SEX, LAB_AGE, PAT_ID
+FROM LABORATORY LEFT JOIN PATIENT ON LAB_PAT_ID = PAT_ID
+WHERE LAB_ID Like $P{laboratoryID}]]></queryString>
 
+	<field name="LAB_SEX" class="java.lang.String"/>
+	<field name="LAB_AGE" class="java.lang.Integer"/>
 	<field name="PAT_ID" class="java.lang.Integer"/>
-	<field name="PAT_FNAME" class="java.lang.String"/>
-	<field name="PAT_SNAME" class="java.lang.String"/>
-	<field name="PAT_NAME" class="java.lang.String"/>
-	<field name="PAT_BDATE" class="java.sql.Date"/>
-	<field name="PAT_AGE" class="java.lang.Integer"/>
-	<field name="PAT_AGETYPE" class="java.lang.String"/>
-	<field name="PAT_SEX" class="java.lang.String"/>
-	<field name="PAT_ADDR" class="java.lang.String"/>
-	<field name="PAT_CITY" class="java.lang.String"/>
-	<field name="PAT_NEXT_KIN" class="java.lang.String"/>
-	<field name="PAT_TELE" class="java.lang.String"/>
-	<field name="PAT_MOTH_NAME" class="java.lang.String"/>
-	<field name="PAT_MOTH" class="java.lang.String"/>
-	<field name="PAT_FATH_NAME" class="java.lang.String"/>
-	<field name="PAT_FATH" class="java.lang.String"/>
-	<field name="PAT_LEDU" class="java.lang.String"/>
-	<field name="PAT_ESTA" class="java.lang.String"/>
-	<field name="PAT_PTOGE" class="java.lang.String"/>
-	<field name="PAT_NOTE" class="java.lang.String"/>
-	<field name="PAT_DELETED" class="java.lang.String"/>
-	<field name="PAT_LOCK" class="java.lang.Integer"/>
-	<field name="PAT_BTYPE" class="java.lang.String"/>
-	<field name="PAT_PHOTO" class="java.lang.Object"/>
-	<field name="PAT_TAXCODE" class="java.lang.String"/>
-	<field name="PAT_TIMESTAMP" class="java.sql.Timestamp"/>
 
 	<variable name="now" class="java.util.Date" resetType="Report" calculation="Nothing">
 		<variableExpression><![CDATA[new Date()]]></variableExpression>
@@ -65,22 +42,10 @@ WHERE PAT_ID Like $P{patientID}]]></queryString>
 			</band>
 		</background>
 		<title>
-			<band height="0"  isSplitAllowed="true" >
-			</band>
-		</title>
-		<pageHeader>
-			<band height="0"  isSplitAllowed="true" >
-			</band>
-		</pageHeader>
-		<columnHeader>
-			<band height="0"  isSplitAllowed="true" >
-			</band>
-		</columnHeader>
-		<detail>
 			<band height="56"  isSplitAllowed="true" >
-				<textField isStretchWithOverflow="false" isBlankWhenNull="false" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
+				<textField isStretchWithOverflow="false" isBlankWhenNull="true" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
 					<reportElement
-						x="50"
+						x="48"
 						y="5"
 						width="39"
 						height="10"
@@ -98,7 +63,7 @@ WHERE PAT_ID Like $P{patientID}]]></queryString>
 				<staticText>
 					<reportElement
 						mode="Transparent"
-						x="5"
+						x="3"
 						y="5"
 						width="45"
 						height="10"
@@ -115,7 +80,7 @@ WHERE PAT_ID Like $P{patientID}]]></queryString>
 				</staticText>
 				<textField isStretchWithOverflow="true" isBlankWhenNull="true" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
 					<reportElement
-						x="24"
+						x="22"
 						y="17"
 						width="23"
 						height="9"
@@ -128,11 +93,11 @@ WHERE PAT_ID Like $P{patientID}]]></queryString>
 					<textElement>
 						<font size="7"/>
 					</textElement>
-				<textFieldExpression   class="java.lang.String"><![CDATA[$F{PAT_SEX}]]></textFieldExpression>
+				<textFieldExpression   class="java.lang.String"><![CDATA[$F{LAB_SEX}]]></textFieldExpression>
 				</textField>
 				<staticText>
 					<reportElement
-						x="5"
+						x="3"
 						y="17"
 						width="20"
 						height="9"
@@ -149,7 +114,7 @@ WHERE PAT_ID Like $P{patientID}]]></queryString>
 				</staticText>
 				<staticText>
 					<reportElement
-						x="47"
+						x="45"
 						y="17"
 						width="20"
 						height="9"
@@ -166,7 +131,7 @@ WHERE PAT_ID Like $P{patientID}]]></queryString>
 				</staticText>
 				<staticText>
 					<reportElement
-						x="5"
+						x="3"
 						y="28"
 						width="44"
 						height="9"
@@ -183,7 +148,7 @@ WHERE PAT_ID Like $P{patientID}]]></queryString>
 				</staticText>
 				<line direction="TopDown">
 					<reportElement
-						x="50"
+						x="48"
 						y="36"
 						width="82"
 						height="0"
@@ -192,7 +157,7 @@ WHERE PAT_ID Like $P{patientID}]]></queryString>
 				</line>
 				<staticText>
 					<reportElement
-						x="5"
+						x="3"
 						y="41"
 						width="25"
 						height="9"
@@ -209,7 +174,7 @@ WHERE PAT_ID Like $P{patientID}]]></queryString>
 				</staticText>
 				<staticText>
 					<reportElement
-						x="76"
+						x="74"
 						y="41"
 						width="25"
 						height="9"
@@ -226,7 +191,7 @@ WHERE PAT_ID Like $P{patientID}]]></queryString>
 				</staticText>
 				<line direction="TopDown">
 					<reportElement
-						x="32"
+						x="30"
 						y="48"
 						width="44"
 						height="1"
@@ -235,7 +200,7 @@ WHERE PAT_ID Like $P{patientID}]]></queryString>
 				</line>
 				<line direction="TopDown">
 					<reportElement
-						x="104"
+						x="102"
 						y="48"
 						width="26"
 						height="1"
@@ -244,7 +209,7 @@ WHERE PAT_ID Like $P{patientID}]]></queryString>
 				</line>
 				<textField isStretchWithOverflow="true" isBlankWhenNull="true" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
 					<reportElement
-						x="66"
+						x="64"
 						y="17"
 						width="23"
 						height="9"
@@ -257,8 +222,20 @@ WHERE PAT_ID Like $P{patientID}]]></queryString>
 					<textElement>
 						<font size="7"/>
 					</textElement>
-				<textFieldExpression   class="java.lang.Integer"><![CDATA[$F{PAT_AGE}]]></textFieldExpression>
+				<textFieldExpression   class="java.lang.Integer"><![CDATA[$F{LAB_AGE}]]></textFieldExpression>
 				</textField>
+			</band>
+		</title>
+		<pageHeader>
+			<band height="0"  isSplitAllowed="true" >
+			</band>
+		</pageHeader>
+		<columnHeader>
+			<band height="0"  isSplitAllowed="true" >
+			</band>
+		</columnHeader>
+		<detail>
+			<band height="0"  isSplitAllowed="true" >
 			</band>
 		</detail>
 		<columnFooter>
