--- a/rpt/patient_clinical_sheet_patsubreport.jrxml
+++ b/rpt/patient_clinical_sheet_patsubreport.jrxml
@@ -34,6 +34,7 @@
 FROM PATIENT
 LEFT JOIN (SELECT PEX_PAT_ID, PEX_HEIGHT, PEX_WEIGHT FROM PATIENTEXAMINATION WHERE PEX_PAT_ID = $P{patientID} ORDER BY PEX_DATE DESC LIMIT 1) AS HW
 ON PAT_ID = PEX_PAT_ID
+LEFT JOIN PATIENT_PROFILE_PHOTO f ON (PROFILE_PHOTO_ID = f.PAT_PROFILE_PHOTO_ID)
 WHERE PAT_ID = $P{patientID}]]></queryString>
 
 	<field name="PAT_ID" class="java.lang.Integer"/>
