--- a/rpt/BillsReportPending.jrxml
+++ b/rpt/BillsReportPending.jrxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="BillsReportPending" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="30" rightMargin="30" topMargin="20" bottomMargin="20" isFloatColumnFooter="true" uuid="1f58607c-756e-48c5-b6f1-ddb3e1d18223">
+<!-- Created with Jaspersoft Studio version 6.15.0.final using JasperReports Library version 6.15.0-dd49bfb94918336b8321d5507193f0169ead4e95  -->
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="BillsReportPending" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="30" rightMargin="30" topMargin="20" bottomMargin="20" isFloatColumnFooter="true" resourceBundle="BillsReportPending" whenResourceMissingType="Key" uuid="1f58607c-756e-48c5-b6f1-ddb3e1d18223">
 	<property name="ireport.scriptlethandling" value="0"/>
 	<property name="ireport.encoding" value="UTF-8"/>
 	<property name="ireport.zoom" value="1.0"/>
@@ -121,7 +122,7 @@ ORDER BY BLL_DATE]]>
 	</background>
 	<title>
 		<band height="114" splitType="Stretch">
-			<textField isStretchWithOverflow="true" isBlankWhenNull="false">
+			<textField textAdjust="StretchHeight" isBlankWhenNull="false">
 				<reportElement key="textField-18" x="0" y="0" width="535" height="22" uuid="0cc77400-8d51-4fec-92d6-735d43882f62"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -134,7 +135,7 @@ ORDER BY BLL_DATE]]>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{Hospital}]]></textFieldExpression>
 			</textField>
-			<textField isStretchWithOverflow="true" isBlankWhenNull="false">
+			<textField textAdjust="StretchHeight" isBlankWhenNull="false">
 				<reportElement key="textField-19" x="0" y="22" width="535" height="17" uuid="45bbb81a-1d04-4da2-ba33-ecf730038335"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -147,7 +148,7 @@ ORDER BY BLL_DATE]]>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{Address} + " - " + $P{City}]]></textFieldExpression>
 			</textField>
-			<textField isStretchWithOverflow="true" isBlankWhenNull="false">
+			<textField textAdjust="StretchHeight" isBlankWhenNull="false">
 				<reportElement key="textField-20" x="0" y="39" width="535" height="17" uuid="c38a8696-9046-4ede-88f8-3c7ea46a0d3a"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -160,7 +161,7 @@ ORDER BY BLL_DATE]]>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{Email}]]></textFieldExpression>
 			</textField>
-			<textField isStretchWithOverflow="true" isBlankWhenNull="false">
+			<textField textAdjust="StretchHeight" isBlankWhenNull="false">
 				<reportElement key="textField-21" x="0" y="56" width="535" height="17" uuid="b9c3f75a-1aa2-4cda-9b3d-5bef7622a684"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -173,7 +174,7 @@ ORDER BY BLL_DATE]]>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{Telephone}]]></textFieldExpression>
 			</textField>
-			<staticText>
+			<textField>
 				<reportElement key="staticText-13" x="0" y="83" width="535" height="21" uuid="97ada139-d114-4e0b-aa19-8371086b464c"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -184,8 +185,8 @@ ORDER BY BLL_DATE]]>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Arial" size="14" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Periodical Incomes/Billed and Receivables Report (with pending invoices)]]></text>
-			</staticText>
+				<textFieldExpression><![CDATA[$R{Periodical.Incomes.Billed.And.Receivables.Report.With.Pending.Invoices}]]></textFieldExpression>
+			</textField>
 		</band>
 	</title>
 	<pageHeader>
@@ -203,7 +204,7 @@ ORDER BY BLL_DATE]]>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{fromdate}]]></textFieldExpression>
 			</textField>
-			<staticText>
+			<textField>
 				<reportElement key="staticText-21" x="411" y="0" width="26" height="21" uuid="80f665c4-f653-4ab2-a07a-dae222e47e97"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -214,8 +215,8 @@ ORDER BY BLL_DATE]]>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Arial" size="14" isBold="true"/>
 				</textElement>
-				<text><![CDATA[TO]]></text>
-			</staticText>
+				<textFieldExpression><![CDATA[$R{To}]]></textFieldExpression>
+			</textField>
 			<textField pattern="dd/MM/yyyy" isBlankWhenNull="false">
 				<reportElement key="textField-36" x="437" y="0" width="98" height="21" uuid="c7ae4052-672e-4369-b389-6aef2a41699c"/>
 				<box>
@@ -229,7 +230,7 @@ ORDER BY BLL_DATE]]>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{todate}]]></textFieldExpression>
 			</textField>
-			<staticText>
+			<textField>
 				<reportElement key="staticText-22" x="158" y="0" width="155" height="21" uuid="bb8bf92b-a1cb-4df6-be4e-8fc6ab587cb0"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -240,13 +241,13 @@ ORDER BY BLL_DATE]]>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font fontName="Arial" size="14" isBold="true"/>
 				</textElement>
-				<text><![CDATA[report from]]></text>
-			</staticText>
+				<textFieldExpression><![CDATA[$R{Report.From}]]></textFieldExpression>
+			</textField>
 		</band>
 	</pageHeader>
 	<columnHeader>
 		<band height="32" splitType="Stretch">
-			<staticText>
+			<textField>
 				<reportElement key="staticText-2" x="0" y="0" width="42" height="32" uuid="e8c8d367-dc5b-4ee3-b570-5e4ef478fa17"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -257,9 +258,9 @@ ORDER BY BLL_DATE]]>
 				<textElement verticalAlignment="Middle">
 					<font size="12" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Bill ID]]></text>
-			</staticText>
-			<staticText>
+				<textFieldExpression><![CDATA[$R{Bill.Id}]]></textFieldExpression>
+			</textField>
+			<textField>
 				<reportElement key="staticText-3" x="107" y="0" width="123" height="32" uuid="3fd2e740-311f-4e9c-bfb6-59a1d5ac1134"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -270,9 +271,9 @@ ORDER BY BLL_DATE]]>
 				<textElement verticalAlignment="Middle">
 					<font size="12" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Patient]]></text>
-			</staticText>
-			<staticText>
+				<textFieldExpression><![CDATA[$R{Patient}]]></textFieldExpression>
+			</textField>
+			<textField>
 				<reportElement key="staticText-8" x="42" y="0" width="65" height="32" uuid="a2f497f5-881c-4aff-ac32-bf74926e9dc0"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -283,9 +284,9 @@ ORDER BY BLL_DATE]]>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="12" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Date]]></text>
-			</staticText>
-			<staticText>
+				<textFieldExpression><![CDATA[$R{Date}]]></textFieldExpression>
+			</textField>
+			<textField>
 				<reportElement key="staticText-9" x="230" y="0" width="63" height="32" uuid="19a4a7b3-9e80-4dfc-b0f5-289e6d9c1932"/>
 				<box rightPadding="5">
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -296,9 +297,9 @@ ORDER BY BLL_DATE]]>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font size="12" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Amount]]></text>
-			</staticText>
-			<staticText>
+				<textFieldExpression><![CDATA[$R{Amount}]]></textFieldExpression>
+			</textField>
+			<textField>
 				<reportElement key="staticText-10" x="293" y="0" width="65" height="32" uuid="cfd5a59c-e348-4831-9556-613364a84c7f"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -309,9 +310,9 @@ ORDER BY BLL_DATE]]>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="12" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Last Payment]]></text>
-			</staticText>
-			<staticText>
+				<textFieldExpression><![CDATA[$R{Last.Payment}]]></textFieldExpression>
+			</textField>
+			<textField>
 				<reportElement key="staticText-11" x="427" y="0" width="65" height="32" uuid="bee946f5-296f-4a32-a636-105760987757"/>
 				<box rightPadding="5">
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -322,9 +323,9 @@ ORDER BY BLL_DATE]]>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font size="12" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Balance]]></text>
-			</staticText>
-			<staticText>
+				<textFieldExpression><![CDATA[$R{Balance}]]></textFieldExpression>
+			</textField>
+			<textField>
 				<reportElement key="staticText-14" x="358" y="0" width="69" height="32" uuid="75cdaf3c-5ef9-4293-8035-30e734c00e46"/>
 				<box rightPadding="5">
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -335,9 +336,9 @@ ORDER BY BLL_DATE]]>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font size="12" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Paid]]></text>
-			</staticText>
-			<staticText>
+				<textFieldExpression><![CDATA[$R{Paid}]]></textFieldExpression>
+			</textField>
+			<textField>
 				<reportElement key="staticText-20" x="492" y="0" width="43" height="32" uuid="0b61aaac-c160-4959-ae7a-30c037d47c7d"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -348,8 +349,8 @@ ORDER BY BLL_DATE]]>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font size="12" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Status]]></text>
-			</staticText>
+				<textFieldExpression><![CDATA[$R{Status}]]></textFieldExpression>
+			</textField>
 		</band>
 	</columnHeader>
 	<detail>
@@ -482,7 +483,7 @@ new SimpleDateFormat("(dd/MM/yy)").format($F{BLL_DATE}))]]></textFieldExpression
 				</textElement>
 				<textFieldExpression><![CDATA[$V{TOTAL_RECEIVABLE}]]></textFieldExpression>
 			</textField>
-			<staticText>
+			<textField>
 				<reportElement key="staticText-7" x="0" y="36" width="117" height="25" uuid="d10e994a-5c66-4b34-9716-0ed6a14143ac"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -493,8 +494,8 @@ new SimpleDateFormat("(dd/MM/yy)").format($F{BLL_DATE}))]]></textFieldExpression
 				<textElement textAlignment="Center" verticalAlignment="Bottom">
 					<font size="12" isBold="true"/>
 				</textElement>
-				<text><![CDATA[TOTAL BILLED]]></text>
-			</staticText>
+				<textFieldExpression><![CDATA[$R{Total.Billed}]]></textFieldExpression>
+			</textField>
 			<textField pattern="#,##0.00" isBlankWhenNull="true">
 				<reportElement key="textField-28" x="0" y="80" width="117" height="25" uuid="26fd5dfd-50a7-4547-9123-ed1a0a1cef41"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
@@ -509,7 +510,7 @@ new SimpleDateFormat("(dd/MM/yy)").format($F{BLL_DATE}))]]></textFieldExpression
 				</textElement>
 				<textFieldExpression><![CDATA[$V{TOTAL_INCOME}]]></textFieldExpression>
 			</textField>
-			<staticText>
+			<textField>
 				<reportElement key="staticText-18" x="209" y="36" width="117" height="25" uuid="b408ce55-8236-4acc-b4f6-65b85ed5a8e8"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -520,9 +521,9 @@ new SimpleDateFormat("(dd/MM/yy)").format($F{BLL_DATE}))]]></textFieldExpression
 				<textElement textAlignment="Center" verticalAlignment="Bottom">
 					<font size="12" isBold="true"/>
 				</textElement>
-				<text><![CDATA[TOTAL INCOME]]></text>
-			</staticText>
-			<staticText>
+				<textFieldExpression><![CDATA[$R{Total.Income}]]></textFieldExpression>
+			</textField>
+			<textField>
 				<reportElement key="staticText-19" x="418" y="36" width="117" height="25" uuid="fab94fd1-3944-4b55-abca-8f59fd831b67"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -533,29 +534,29 @@ new SimpleDateFormat("(dd/MM/yy)").format($F{BLL_DATE}))]]></textFieldExpression
 				<textElement textAlignment="Center" verticalAlignment="Bottom">
 					<font size="12" isBold="true"/>
 				</textElement>
-				<text><![CDATA[RECEIVABLES]]></text>
-			</staticText>
-			<staticText>
+				<textFieldExpression><![CDATA[$R{Receivables}]]></textFieldExpression>
+			</textField>
+			<textField>
 				<reportElement key="staticText-23" x="0" y="61" width="117" height="19" uuid="4866c23d-c692-4a18-9cba-4d593db5d6fe"/>
 				<textElement textAlignment="Center" verticalAlignment="Top">
 					<font fontName="Arial" size="10" isBold="false" isItalic="false" isUnderline="false" isStrikeThrough="false"/>
 				</textElement>
-				<text><![CDATA[(accrued in period)]]></text>
-			</staticText>
-			<staticText>
+				<textFieldExpression><![CDATA[$R{Accrued.In.Period}]]></textFieldExpression>
+			</textField>
+			<textField>
 				<reportElement key="staticText-24" x="209" y="61" width="117" height="19" uuid="45f6c84c-11eb-4649-8556-a3a67b836cda"/>
 				<textElement textAlignment="Center" verticalAlignment="Top">
 					<font fontName="Arial" size="10" isBold="false" isItalic="false" isUnderline="false" isStrikeThrough="false"/>
 				</textElement>
-				<text><![CDATA[(accrued in period)]]></text>
-			</staticText>
-			<staticText>
+				<textFieldExpression><![CDATA[$R{Accrued.In.Period}]]></textFieldExpression>
+			</textField>
+			<textField>
 				<reportElement key="staticText-25" x="418" y="61" width="117" height="19" uuid="4b6708a8-bf3c-42c7-b77e-c8df960177d5"/>
 				<textElement textAlignment="Center" verticalAlignment="Top">
 					<font fontName="Arial" size="10" isBold="false" isItalic="false" isUnderline="false" isStrikeThrough="false"/>
 				</textElement>
-				<text><![CDATA[(accrued in period)]]></text>
-			</staticText>
+				<textFieldExpression><![CDATA[$R{Accrued.In.Period}]]></textFieldExpression>
+			</textField>
 		</band>
 	</summary>
 </jasperReport>
