--- a/rpt/BillsReportUserInDate.jrxml
+++ b/rpt/BillsReportUserInDate.jrxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="BillsReportUserInDate" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="30" rightMargin="30" topMargin="20" bottomMargin="20" isFloatColumnFooter="true" uuid="e695501a-7ee5-403f-a28c-47bd09c2758a">
+<!-- Created with Jaspersoft Studio version 6.15.0.final using JasperReports Library version 6.15.0-dd49bfb94918336b8321d5507193f0169ead4e95  -->
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="BillsReportUserInDate" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="30" rightMargin="30" topMargin="20" bottomMargin="20" isFloatColumnFooter="true" resourceBundle="BillsReportUserInDate" whenResourceMissingType="Key" uuid="e695501a-7ee5-403f-a28c-47bd09c2758a">
 	<property name="ireport.scriptlethandling" value="0"/>
 	<property name="ireport.encoding" value="UTF-8"/>
 	<property name="ireport.zoom" value="1.0"/>
@@ -85,7 +86,7 @@ GROUP BY BLP_USR_ID_A]]>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{Telephone}]]></textFieldExpression>
 			</textField>
-			<textField isStretchWithOverflow="true" pattern="dd/MM/yyyy" isBlankWhenNull="false">
+			<textField textAdjust="StretchHeight" pattern="dd/MM/yyyy" isBlankWhenNull="false">
 				<reportElement key="textField-22" x="83" y="73" width="128" height="21" uuid="9705c451-a6bc-48f4-92a6-4a09e25a0d9d"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -98,7 +99,7 @@ GROUP BY BLP_USR_ID_A]]>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{fromdate}]]></textFieldExpression>
 			</textField>
-			<staticText>
+			<textField>
 				<reportElement key="staticText-17" x="-1" y="73" width="84" height="21" uuid="72e5e483-c239-4d18-acdd-b7eb31b2566f"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -109,8 +110,8 @@ GROUP BY BLP_USR_ID_A]]>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font fontName="Arial" size="12" isBold="true"/>
 				</textElement>
-				<text><![CDATA[DATE]]></text>
-			</staticText>
+				<textFieldExpression><![CDATA[$R{Date}]]></textFieldExpression>
+			</textField>
 			<textField pattern="dd/MM/yyyy" isBlankWhenNull="false">
 				<reportElement key="textField-23" x="83" y="115" width="128" height="21" uuid="7a45fd7b-2f18-4895-8b83-f9fe7905cd30"/>
 				<box>
@@ -124,7 +125,7 @@ GROUP BY BLP_USR_ID_A]]>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{user}]]></textFieldExpression>
 			</textField>
-			<staticText>
+			<textField>
 				<reportElement key="staticText-18" x="-1" y="115" width="84" height="21" uuid="22a79f72-7a71-4e51-bec1-48ace1cde02f"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -135,9 +136,9 @@ GROUP BY BLP_USR_ID_A]]>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font fontName="Arial" size="12" isBold="true"/>
 				</textElement>
-				<text><![CDATA[USER]]></text>
-			</staticText>
-			<textField isStretchWithOverflow="true" pattern="HH:mm:ss" isBlankWhenNull="false">
+				<textFieldExpression><![CDATA[$R{User}]]></textFieldExpression>
+			</textField>
+			<textField textAdjust="StretchHeight" pattern="HH:mm:ss" isBlankWhenNull="false">
 				<reportElement key="textField-25" x="83" y="94" width="128" height="21" uuid="1ab0b819-ca5e-4cba-a05a-84b0797050e7"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -150,7 +151,7 @@ GROUP BY BLP_USR_ID_A]]>
 				</textElement>
 				<textFieldExpression><![CDATA[new Date()]]></textFieldExpression>
 			</textField>
-			<staticText>
+			<textField>
 				<reportElement key="staticText-20" x="-1" y="94" width="84" height="21" uuid="4fd2a34e-1714-41a4-b099-09c150f572a9"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -161,8 +162,8 @@ GROUP BY BLP_USR_ID_A]]>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font fontName="Arial" size="12" isBold="true"/>
 				</textElement>
-				<text><![CDATA[TIME]]></text>
-			</staticText>
+				<textFieldExpression><![CDATA[$R{Time}]]></textFieldExpression>
+			</textField>
 		</band>
 	</title>
 	<pageHeader>
@@ -173,7 +174,7 @@ GROUP BY BLP_USR_ID_A]]>
 	</columnHeader>
 	<detail>
 		<band height="25" splitType="Stretch">
-			<staticText>
+			<textField>
 				<reportElement key="staticText-19" x="-1" y="0" width="84" height="25" uuid="6170861a-e5ef-4cab-ae85-e85740b9a573"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -184,8 +185,8 @@ GROUP BY BLP_USR_ID_A]]>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font size="12" isBold="true"/>
 				</textElement>
-				<text><![CDATA[TOTAL]]></text>
-			</staticText>
+				<textFieldExpression><![CDATA[$R{Total}]]></textFieldExpression>
+			</textField>
 			<textField pattern="#,##0.00" isBlankWhenNull="true">
 				<reportElement key="textField-24" x="83" y="0" width="128" height="25" uuid="83ff7762-1695-4720-b43c-f178e7d0dc68"/>
 				<box>
@@ -209,7 +210,7 @@ GROUP BY BLP_USR_ID_A]]>
 	</pageFooter>
 	<summary>
 		<band height="143" splitType="Stretch">
-			<staticText>
+			<textField>
 				<reportElement key="staticText-14" x="372" y="32" width="163" height="25" uuid="94e61938-f869-40ca-85f4-d4a91e90f343"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -220,8 +221,8 @@ GROUP BY BLP_USR_ID_A]]>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="10" isBold="true"/>
 				</textElement>
-				<text><![CDATA[SIGN]]></text>
-			</staticText>
+				<textFieldExpression><![CDATA[$R{Sign}]]></textFieldExpression>
+			</textField>
 			<staticText>
 				<reportElement key="staticText-16" x="372" y="90" width="163" height="25" uuid="63b6e835-2508-4a1a-abe4-a04079a7b9bb"/>
 				<box>
