OP-95: BillsReportUserInDateTxt translated

--- a/rpt/BillsReportUserInDateTxt.jrxml
+++ b/rpt/BillsReportUserInDateTxt.jrxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="BillsReportUserInDateTxt" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="30" rightMargin="30" topMargin="20" bottomMargin="20" isFloatColumnFooter="true" uuid="12083df1-eddc-4182-be8c-fda1fc1d5c6b">
+<!-- Created with Jaspersoft Studio version 6.15.0.final using JasperReports Library version 6.15.0-dd49bfb94918336b8321d5507193f0169ead4e95  -->
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="BillsReportUserInDateTxt" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="30" rightMargin="30" topMargin="20" bottomMargin="20" isFloatColumnFooter="true" resourceBundle="BillsReportUserInDateTxt" whenResourceMissingType="Key" uuid="12083df1-eddc-4182-be8c-fda1fc1d5c6b">
 	<property name="ireport.scriptlethandling" value="0"/>
 	<property name="ireport.encoding" value="UTF-8"/>
 	<property name="ireport.zoom" value="1.0"/>
@@ -30,7 +31,7 @@ AND BLP_USR_ID_A like $P{user}]]>
 	</background>
 	<title>
 		<band height="159" splitType="Stretch">
-			<textField isStretchWithOverflow="true" isBlankWhenNull="false">
+			<textField textAdjust="StretchHeight" isBlankWhenNull="false">
 				<reportElement key="textField-18" x="0" y="0" width="535" height="22" uuid="cfed68d4-bdeb-4b6f-bad0-8bce859c59e9"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -43,7 +44,7 @@ AND BLP_USR_ID_A like $P{user}]]>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{Hospital}]]></textFieldExpression>
 			</textField>
-			<textField isStretchWithOverflow="true" isBlankWhenNull="false">
+			<textField textAdjust="StretchHeight" isBlankWhenNull="false">
 				<reportElement key="textField-19" x="0" y="22" width="535" height="17" uuid="c0c11bb2-6837-4c59-b77b-6cbb671c4822"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -56,7 +57,7 @@ AND BLP_USR_ID_A like $P{user}]]>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{Address} + " - " + $P{City}]]></textFieldExpression>
 			</textField>
-			<textField isStretchWithOverflow="true" isBlankWhenNull="false">
+			<textField textAdjust="StretchHeight" isBlankWhenNull="false">
 				<reportElement key="textField-20" x="0" y="39" width="535" height="17" uuid="1bf54d3f-9870-42fd-bef8-451280896b20"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -69,7 +70,7 @@ AND BLP_USR_ID_A like $P{user}]]>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{Email}]]></textFieldExpression>
 			</textField>
-			<textField isStretchWithOverflow="true" isBlankWhenNull="false">
+			<textField textAdjust="StretchHeight" isBlankWhenNull="false">
 				<reportElement key="textField-21" x="0" y="56" width="535" height="17" uuid="156f0324-76be-47bc-b28d-db08065f592e"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -82,7 +83,7 @@ AND BLP_USR_ID_A like $P{user}]]>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{Telephone}]]></textFieldExpression>
 			</textField>
-			<textField isStretchWithOverflow="true" pattern="dd/MM/yyyy" isBlankWhenNull="false">
+			<textField textAdjust="StretchHeight" pattern="dd/MM/yyyy" isBlankWhenNull="false">
 				<reportElement key="textField-23" x="84" y="96" width="252" height="21" uuid="071f503b-1b96-4047-9dd4-61ec2981816d"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -95,7 +96,7 @@ AND BLP_USR_ID_A like $P{user}]]>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{fromdate}]]></textFieldExpression>
 			</textField>
-			<staticText>
+			<textField>
 				<reportElement key="staticText-13" x="0" y="96" width="84" height="21" uuid="96af4c54-7405-4868-88ab-b735584bab61"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -106,8 +107,8 @@ AND BLP_USR_ID_A like $P{user}]]>
 				<textElement textAlignment="Left" verticalAlignment="Middle">
 					<font fontName="Arial" size="12" isBold="true"/>
 				</textElement>
-				<text><![CDATA[DATE]]></text>
-			</staticText>
+				<textFieldExpression><![CDATA[$R{Date}]]></textFieldExpression>
+			</textField>
 			<textField pattern="dd/MM/yyyy" isBlankWhenNull="false">
 				<reportElement key="textField-29" x="84" y="138" width="252" height="21" uuid="d00014e8-941c-4b56-b70f-48bef3182b41"/>
 				<box>
@@ -121,7 +122,7 @@ AND BLP_USR_ID_A like $P{user}]]>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{user}]]></textFieldExpression>
 			</textField>
-			<staticText>
+			<textField>
 				<reportElement key="staticText-15" x="0" y="138" width="84" height="21" uuid="e542ba5f-19f5-44b1-8ddb-7928f3f4036b"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -132,9 +133,9 @@ AND BLP_USR_ID_A like $P{user}]]>
 				<textElement textAlignment="Left" verticalAlignment="Middle">
 					<font fontName="Arial" size="12" isBold="true"/>
 				</textElement>
-				<text><![CDATA[USER]]></text>
-			</staticText>
-			<textField isStretchWithOverflow="true" pattern="HH:mm:ss" isBlankWhenNull="false">
+				<textFieldExpression><![CDATA[$R{User}]]></textFieldExpression>
+			</textField>
+			<textField textAdjust="StretchHeight" pattern="HH:mm:ss" isBlankWhenNull="false">
 				<reportElement key="textField-30" x="84" y="117" width="252" height="21" uuid="c90e05ce-07ca-4e25-9cfd-97a49af645ac"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -147,7 +148,7 @@ AND BLP_USR_ID_A like $P{user}]]>
 				</textElement>
 				<textFieldExpression><![CDATA[new Date()]]></textFieldExpression>
 			</textField>
-			<staticText>
+			<textField>
 				<reportElement key="staticText-17" x="0" y="117" width="84" height="21" uuid="27f02906-f741-49a8-902d-ff599a003621"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -158,8 +159,8 @@ AND BLP_USR_ID_A like $P{user}]]>
 				<textElement textAlignment="Left" verticalAlignment="Middle">
 					<font fontName="Arial" size="12" isBold="true"/>
 				</textElement>
-				<text><![CDATA[TIME]]></text>
-			</staticText>
+				<textFieldExpression><![CDATA[$R{Time}]]></textFieldExpression>
+			</textField>
 		</band>
 	</title>
 	<pageHeader>
@@ -170,7 +171,7 @@ AND BLP_USR_ID_A like $P{user}]]>
 	</columnHeader>
 	<detail>
 		<band height="66" splitType="Stretch">
-			<staticText>
+			<textField>
 				<reportElement key="staticText-7" x="0" y="0" width="84" height="25" uuid="46225eec-3625-474f-bc41-de162b22e809"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -181,8 +182,8 @@ AND BLP_USR_ID_A like $P{user}]]>
 				<textElement textAlignment="Left" verticalAlignment="Middle">
 					<font size="12" isBold="true"/>
 				</textElement>
-				<text><![CDATA[TOTAL]]></text>
-			</staticText>
+				<textFieldExpression><![CDATA[$R{Total}]]></textFieldExpression>
+			</textField>
 			<textField pattern="#,##0.00" isBlankWhenNull="true">
 				<reportElement key="textField-28" x="84" y="0" width="252" height="25" uuid="eff6a5fe-47dc-4080-85e6-6763165f9c12"/>
 				<box>
@@ -206,7 +207,7 @@ AND BLP_USR_ID_A like $P{user}]]>
 	</pageFooter>
 	<summary>
 		<band height="25" splitType="Stretch">
-			<staticText>
+			<textField>
 				<reportElement key="staticText-14" x="372" y="0" width="163" height="25" uuid="0c1e893c-250e-422f-a206-db6e768a5ea4"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -217,8 +218,8 @@ AND BLP_USR_ID_A like $P{user}]]>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="10" isBold="true"/>
 				</textElement>
-				<text><![CDATA[SIGN]]></text>
-			</staticText>
+				<textFieldExpression><![CDATA[$R{Sign}]]></textFieldExpression>
+			</textField>
 		</band>
 	</summary>
 </jasperReport>
